--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.60.5",
+    "@types/qrcode": "^1.5.5",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^7.0.0",
     "class-variance-authority": "^0.7.1",
@@ -60,12 +61,14 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
