--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ethers": "^6.15.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^11.13.1",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
