--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/qrcode": "^1.5.5",
+    "@types/three": "^0.180.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^7.0.0",
     "class-variance-authority": "^0.7.1",
@@ -85,6 +86,7 @@
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "tiny-secp256k1": "^2.2.4",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
