--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/three": "^0.180.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^7.0.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -72,6 +73,7 @@
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
+    "otpauth": "^9.4.1",
     "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
