--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ R2_SECRET_ACCESS_KEY = 'fd8c0ab1aebfd90b03a18a6e3d86f97752a7962cbf3ab424aacd7aff
 VITE_TRANSAK_API_KEY=5a30d45e-5510-4c50-804b-8d1e9b948732
 VITE_TRANSAK_SECRET=u2bh0afwm6M2/GezmP0iEg==
 VITE_TRANSAK_ENVIRONMENT = STAGING
+
+VITE_TURNSTILE_SITE_KEY = 0x4AAAAAACFq1xUfZ10Qv7tA
