--- a/package.json
+++ b/package.json
@@ -102,8 +102,7 @@
     "@replit/vite-plugin-cartographer": "^0.3.1",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
-    "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.0.0-alpha.25",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
@@ -118,7 +117,7 @@
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.0.0-alpha.25",
+    "tailwindcss": "^3.4.19",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
     "vite": "^5.4.20"
