--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ VITE_TRANSAK_SECRET=u2bh0afwm6M2/GezmP0iEg==
 VITE_TRANSAK_ENVIRONMENT = STAGING
 
 VITE_TURNSTILE_SITE_KEY = 0x4AAAAAACFq1xUfZ10Qv7tA
+
+VITE_MOONPAY_API_KEY= sk_test_X0NPdCsqwR2FkSwLBrftbAcpGwsLorU
+MOONPAY_SECRET_KEY= pk_test_me2liMdxfIZJWi7gHnHjhE7F7XqupCh
