--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,29 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "/support",
+      "permanent": false,
+      "has": [
+        {
+          "type": "host",
+          "value": "help.pexly.app"
+        }
+      ]
+    }
   ]
 }
