--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.60.5",
+    "@types/crypto-js": "^4.2.2",
     "@types/qrcode": "^1.5.5",
     "@types/three": "^0.180.0",
     "bip39": "^3.1.0",
