--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ VITE_TURNSTILE_SITE_KEY = 0x4AAAAAACFq1xUfZ10Qv7tA
 
 VITE_MOONPAY_API_KEY= pk_test_cb8kQGMWvwV8R15eweH2xmhy6bGrQ
 MOONPAY_SECRET_KEY= sk_test_X0NPdCsqwR2FkSwLBrftbAcpGwsLorU
+
+VITE_ROCKETX_API_KEY=ca50df3e-915b-490b-9f15-09112b4602f5
