--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ VITE_MOONPAY_API_KEY= pk_test_cb8kQGMWvwV8R15eweH2xmhy6bGrQ
 MOONPAY_SECRET_KEY= sk_test_X0NPdCsqwR2FkSwLBrftbAcpGwsLorU
 
 VITE_ROCKETX_API_KEY=ca50df3e-915b-490b-9f15-09112b4602f5
+
+VITE_NEWSDATA_API_KEY=pub_342191f14de1496cbee880cb41e15995
