--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/qrcode": "^1.5.5",
     "@types/three": "^0.180.0",
+    "bip32": "^5.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^7.0.0",
     "buffer": "^6.0.3",
@@ -97,6 +98,8 @@
     "tiny-secp256k1": "^2.2.4",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
