--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ MOONPAY_SECRET_KEY= sk_test_X0NPdCsqwR2FkSwLBrftbAcpGwsLorU
 VITE_ROCKETX_API_KEY=ca50df3e-915b-490b-9f15-09112b4602f5
 
 VITE_NEWSDATA_API_KEY=pub_342191f14de1496cbee880cb41e15995
+
+VITE_ASTERDEX_API_KEY=your_api_key_here
+VITE_ASTERDEX_API_SECRET=your_api_secret_here
