--- a/package.json
+++ b/package.json
@@ -52,8 +52,6 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.60.5",
-    "@types/crypto-js": "^4.2.2",
-    "@types/qrcode": "^1.5.5",
     "@types/three": "^0.180.0",
     "bip32": "^5.0.0",
     "bip39": "^3.1.0",
@@ -67,6 +65,7 @@
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
+    "ecpair": "^3.0.0",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.15.0",
     "express": "^4.21.2",
@@ -111,11 +110,13 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.19",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
+    "@types/node": "^20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
