--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@marsidev/react-turnstile": "^1.4.0",
-    "@mempool/mempool.js": "^3.0.0",
+    "@mempool/mempool.js": "^2.3.0",
     "@moonpay/moonpay-react": "^1.10.6",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.4",
@@ -53,9 +53,9 @@
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/three": "^0.180.0",
-    "bip32": "^5.0.0",
+    "bip32": "^4.0.0",
     "bip39": "^3.1.0",
-    "bitcoinjs-lib": "^7.0.0",
+    "bitcoinjs-lib": "^6.1.7",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -65,12 +65,12 @@
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
-    "ecpair": "^3.0.0",
+    "ecpair": "^2.1.0",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.15.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "face-api.js": "^0.22.2",
+    "face-api.js": "^0.20.0",
     "framer-motion": "^11.13.1",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
@@ -106,15 +106,21 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^4.0.3",
+    "@nomicfoundation/hardhat-ignition": "^3.0.6",
+    "@nomicfoundation/hardhat-toolbox-mocha-ethers": "^3.0.2",
     "@replit/vite-plugin-cartographer": "^0.3.1",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/chai": "^4.3.20",
+    "@types/chai-as-promised": "^8.0.2",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^20.16.11",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.19.3",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/qrcode": "^1.5.6",
@@ -123,13 +129,17 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.23",
-    "drizzle-kit": "^0.31.4",
+    "chai": "^5.3.3",
+    "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.0",
+    "forge-std": "github:foundry-rs/forge-std#v1.9.4",
+    "hardhat": "^3.1.2",
+    "mocha": "^11.7.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "tsx": "^4.20.5",
-    "typescript": "5.6.3",
-    "vite": "^5.4.20"
+    "typescript": "~5.8.0",
+    "vite": "^7.3.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
