--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "connect-pg-simple": "^10.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "ecpair": "^2.1.0",
@@ -92,12 +93,14 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "scrypt-js": "^3.0.1",
+    "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.180.0",
     "tiny-secp256k1": "^2.2.4",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0",
     "wouter": "^3.3.5",
@@ -130,7 +133,7 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.23",
     "chai": "^5.3.3",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.30.0",
     "esbuild": "^0.25.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.1.2",
