--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.910.0",
     "@aws-sdk/s3-request-presigner": "^3.910.0",
+    "@coinbase/onchainkit": "^1.1.2",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@marsidev/react-turnstile": "^1.4.0",
@@ -51,7 +52,7 @@
     "@scure/bip39": "^2.0.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.74.0",
-    "@tanstack/react-query": "^5.60.5",
+    "@tanstack/react-query": "^5.90.19",
     "@types/three": "^0.180.0",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
@@ -101,9 +102,11 @@
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "vercel": "^50.1.6",
+    "viem": "^2.44.4",
     "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0",
+    "wagmi": "^2.12.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
