--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.19",
     "@types/three": "^0.180.0",
+    "@wagmi/core": "^3.2.2",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.7",
