--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.910.0",
     "@aws-sdk/s3-request-presigner": "^3.910.0",
-    "@coinbase/onchainkit": "^1.1.2",
+    "@coinbase/onchainkit": "^0.33.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@marsidev/react-turnstile": "^1.4.0",
@@ -54,7 +54,8 @@
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.19",
     "@types/three": "^0.180.0",
-    "@wagmi/core": "^3.2.2",
+    "@wagmi/connectors": "2.12.0",
+    "@wagmi/core": "^2.12.0",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.7",
