--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.19",
+    "@types/dompurify": "^3.0.5",
     "@types/three": "^0.180.0",
     "@wagmi/core": "^2.16.7",
     "bip32": "^4.0.0",
@@ -64,6 +65,7 @@
     "connect-pg-simple": "^10.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.3.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
