--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.46.0",
     "tiny-secp256k1": "^2.2.4",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
