--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@marsidev/react-turnstile": "^1.4.0",
     "@mempool/mempool.js": "^2.3.0",
     "@neondatabase/serverless": "^0.10.4",
+    "@noble/curves": "^2.0.1",
+    "@noble/hashes": "^2.0.1",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -48,6 +50,7 @@
     "@ramp-network/ramp-instant-sdk": "^6.2.0",
     "@scure/bip32": "^2.0.1",
     "@scure/bip39": "^2.0.1",
+    "@scure/btc-signer": "^2.0.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.19",
@@ -56,7 +59,6 @@
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.7",
-    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -94,7 +96,6 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "scrypt-js": "^3.0.1",
-    "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tiny-secp256k1": "^2.2.4",
@@ -102,7 +103,6 @@
     "vaul": "^1.1.2",
     "vercel": "^50.1.6",
     "viem": "^2.44.4",
-    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0",
     "wagmi": "^2.16.3",
