--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "framer-motion": "^11.13.1",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "lightningcss": "^1.31.1",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
