--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.13.5",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
@@ -82,9 +83,11 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "ripple-keypairs": "^2.0.0",
     "scrypt-js": "^3.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tronweb": "^6.0.0-beta.3",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "vite-plugin-top-level-await": "^1.6.0",
