--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.19",
     "@types/dompurify": "^3.0.5",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
