--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "process": "^0.11.10",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -91,6 +92,7 @@
     "tronweb": "^6.0.0-beta.3",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
+    "vite-plugin-node-polyfills": "^0.25.0",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0",
     "wouter": "^3.3.5",
