--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@marsidev/react-turnstile": "^1.4.0",
     "@neondatabase/serverless": "^0.10.4",
     "@noble/curves": "^2.0.1",
+    "@noble/ed25519": "^3.0.0",
     "@noble/hashes": "^1.7.1",
     "@noble/secp256k1": "^1.7.1",
     "@radix-ui/react-accordion": "^1.2.4",
@@ -61,6 +62,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
+    "ed25519-hd-key": "^1.3.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
