--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@neondatabase/serverless": "^0.10.4",
     "@noble/curves": "^2.0.1",
     "@noble/ed25519": "^3.0.0",
-    "@noble/hashes": "^1.7.1",
-    "@noble/secp256k1": "^1.7.1",
+    "@noble/hashes": "^1.8.0",
+    "@noble/secp256k1": "^1.7.2",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -46,6 +46,7 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@scure/base": "^2.0.0",
     "@scure/bip32": "^2.0.1",
     "@scure/bip39": "^2.0.1",
     "@scure/btc-signer": "^2.0.1",
@@ -87,7 +88,6 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
-    "ripple-keypairs": "^2.0.0",
     "scrypt-js": "^3.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
