--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
-    "date-fns": "^3.6.0",
     "dompurify": "^3.3.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
@@ -77,6 +76,7 @@
     "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postcss-import": "^16.1.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -90,7 +90,6 @@
     "scrypt-js": "^3.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "tronweb": "^6.0.0-beta.3",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
